tests/function/missing_args.rev
fn f(a, b) {}

f(1) // error: wrong arguments number, expected 2 but got 1